@@ -1,3 +1,9 @@
+2005-06-18  Bruno Haible  <bruno@clisp.org>
+
+	* lispbibl.d (oint_data_len, oint_data_mask): On 64-bit platforms,
+	always set oint_data_len to 48, not 40 or 32.
+	(oint_type_*) [MIPS64]: Use only 16 bits for the type.
+
 2005-06-15  Bruno Haible  <bruno@clisp.org>
 
 	* socket.d (string_to_addr): Mark as maygc.
